--- a/index.html
+++ b/index.html
@@ -3,19 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Affirmation – En Daglig Inspiration</title>
-    <!-- Google Font: Poppins -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <style>
         html, body {
             height: 100%;
             margin: 0;
             font-family: 'Poppins', sans-serif;
-            overflow-x: hidden; /* forhindrer horisontal scroll */
+            overflow: hidden; /* Forhindrer scroll */
+            background: linear-gradient(to bottom, #B3E5FC, #0D47A1);
         }
 
         body {
-            background: linear-gradient(to bottom, #B3E5FC, #0D47A1);
-            color: #333;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -52,23 +50,9 @@
             object-fit: contain;
         }
 
-        h1 {
-            font-size: 52px;
-            color: #0D47A1;
-            margin: 0 0 10px 0;
-        }
-
-        h2 {
-            font-size: 36px;
-            margin-bottom: 20px;
-            color: #1E88E5;
-            font-weight: 400;
-        }
-
-        p {
-            font-size: 36px;
-            margin: 20px 0 20px 0;
-        }
+        h1 { font-size: 52px; color: #0D47A1; margin: 0 0 10px 0; }
+        h2 { font-size: 36px; margin-bottom: 20px; color: #1E88E5; font-weight: 400; }
+        p { font-size: 36px; margin: 20px 0 20px 0; }
 
         button {
             padding: 12px 25px;
@@ -82,30 +66,18 @@
             font-weight: 600;
             transition: transform 0.2s, background-color 0.2s;
         }
+        button:hover { transform: scale(1.05); background-color: #FFE58A; }
 
-        button:hover {
-            transform: scale(1.05);
-            background-color: #FFE58A;
-        }
+        .morning { color: #1E88E5; font-weight: 600; }
+        .evening { color: #6A1B9A; font-weight: 600; }
 
-        .morning {
-            color: #1E88E5;
-            font-weight: 600;
-        }
-
-        .evening {
-            color: #6A1B9A;
-            font-weight: 600;
-        }
-
-        /* Musikknap øverst i venstre hjørne */
+        /* Musikknap øverst til venstre */
         .music-player {
             position: fixed;
             top: 20px;
             left: 20px;
             z-index: 1000;
         }
-
         .music-player button {
             font-size: 50px;
             padding: 0;
@@ -115,45 +87,40 @@
             cursor: pointer;
             transition: transform 0.2s;
         }
+        .music-player button:hover { transform: scale(1.2); }
 
-        .music-player button:hover {
-            transform: scale(1.2);
-        }
-
-        /* To-Do liste styling */
+        /* To-Do liste */
         ul {
             list-style: none;
             padding-left: 0;
             margin-top: 20px;
             display: flex;
             flex-direction: column;
-            align-items: center;
+            align-items: flex-start; /* vigtig: juster stjerner korrekt */
             gap: 10px;
             max-width: 600px;
             width: 100%;
         }
-
         li {
             display: flex;
-            align-items: flex-start;
-            justify-content: flex-start;
+            align-items: center;
             font-size: 32px;
             line-height: 1.3;
             text-align: left;
         }
-
         li::before {
             content: "⭐ ";
             margin-right: 8px;
+            flex-shrink: 0;
         }
 
-        /* Blade animation */
+        /* Blade-animation */
         .leaf {
             position: fixed;
             top: -100px;
-            width: 50px;
-            height: 50px;
-            background-image: url('leaf.png'); /* dit blad-ikon */
+            width: 60px;
+            height: 60px;
+            background-image: url('leaf.png'); /* brug dit blad-billede */
             background-size: cover;
             pointer-events: none;
             z-index: 500;
@@ -162,10 +129,9 @@
             animation-timing-function: linear;
             animation-iteration-count: infinite;
         }
-
         @keyframes fall {
             0% { transform: translateY(-100px) rotate(0deg); opacity: 0.8; }
-            100% { transform: translateY(120vh) rotate(360deg); opacity: 0.8; }
+            100% { transform: translateY(110vh) rotate(360deg); opacity: 0.8; }
         }
 
         @media (max-width: 600px) {
@@ -195,7 +161,6 @@
         <div class="pingvin-container">
             <img src="billede4.png" alt="Min søde pingvin">
         </div>
-                
         <button onclick="showAffirmation()">Vis dagens selvrefleksion</button>
         <p id="affirmation">Tryk på knappen for at få en inspirerende handling</p>
         <ul id="todos"></ul>
@@ -205,62 +170,28 @@
         const music = document.getElementById("backgroundMusic");
         const musicBtn = document.getElementById("musicBtn");
 
-        window.addEventListener("load", () => {
-            music.play().catch(() => {
-                musicBtn.textContent = "🔊";
-            });
-            musicBtn.textContent = "🔊";
-        });
+        window.addEventListener("load", () => { music.play().catch(() => {}); });
 
         musicBtn.addEventListener("click", () => {
-            if (music.paused) {
-                music.play();
-                musicBtn.textContent = "🔊";
-            } else {
-                music.pause();
-                musicBtn.textContent = "🔇";
-            }
-        });
-
-        document.addEventListener("visibilitychange", () => {
-            if (document.hidden) {
-                music.pause();
-                musicBtn.textContent = "🔇";
-            }
+            if (music.paused) { music.play(); musicBtn.textContent="🔊"; }
+            else { music.pause(); musicBtn.textContent="🔇"; }
         });
 
         const morningAffirmations = [
             "I dag starter jeg med ro og glæde.",
             "Jeg vælger at være stærk og positiv.",
-            "Min energi åbner nye muligheder.",
-            "Jeg er fokuseret og klar til dagen.",
-            "Jeg tager ansvar for min egen lykke.",
-            "Jeg møder dagen med et åbent hjerte.",
-            "Jeg tiltrækker gode oplevelser.",
-            "Jeg har tillid til mig selv.",
-            "Jeg er taknemmelig for alt, jeg har.",
-            "Jeg vælger glæde i hvert øjeblik."
+            "Min energi åbner nye muligheder."
         ];
-
         const eveningAffirmations = [
             "Jeg slipper dagen med taknemmelighed.",
             "Jeg fortjener hvile og fred.",
-            "Jeg sender kærlige tanker til mig selv.",
-            "Jeg reflekterer over dagens gode øjeblikke.",
-            "Jeg tilgiver mig selv og andre.",
-            "Jeg lader bekymringer falde.",
-            "Jeg er stolt af mig selv i dag.",
-            "Jeg fylder mig selv med ro.",
-            "Jeg giver mig selv kærlighed og omsorg.",
-            "Jeg forbereder mig på en god nats søvn."
+            "Jeg sender kærlige tanker til mig selv."
         ];
-
         const morningTodos = [
             ["Tag dyb vejrtrækning", "Skriv 3 ting du vil opnå", "Start dagen med et smil"],
             ["Lav en positiv liste", "Tag på en kort gåtur", "Gentag en positiv sætning"],
             ["Prøv en ny aktivitet", "Planlæg en lille succes", "Drik et glas vand"]
         ];
-
         const eveningTodos = [
             ["Skriv 3 ting du er taknemmelig for", "Tag et varmt bad", "Lyt til beroligende musik"],
             ["Luk dagen med et smil", "Læs en bog inden sengetid", "Lav vejrtrækning"],
@@ -271,39 +202,36 @@
             const hour = new Date().getHours();
             const affirmationElement = document.getElementById("affirmation");
             let affirmation, todos;
-
-            if (hour < 12) {
-                const idx = Math.floor(Math.random() * morningAffirmations.length);
-                affirmation = morningAffirmations[idx];
-                todos = morningTodos[idx % morningTodos.length];
-                affirmationElement.textContent = "Morgeninspiration: " + affirmation;
-                affirmationElement.className = "morning";
+            if(hour < 12){
+                affirmation = morningAffirmations[Math.floor(Math.random()*morningAffirmations.length)];
+                todos = morningTodos[Math.floor(Math.random()*morningTodos.length)];
+                affirmationElement.className="morning";
+                affirmationElement.textContent="Morgeninspiration: "+affirmation;
             } else {
-                const idx = Math.floor(Math.random() * eveningAffirmations.length);
-                affirmation = eveningAffirmations[idx];
-                todos = eveningTodos[idx % eveningTodos.length];
-                affirmationElement.textContent = "Afteninspiration: " + affirmation;
-                affirmationElement.className = "evening";
+                affirmation = eveningAffirmations[Math.floor(Math.random()*eveningAffirmations.length)];
+                todos = eveningTodos[Math.floor(Math.random()*eveningTodos.length)];
+                affirmationElement.className="evening";
+                affirmationElement.textContent="Afteninspiration: "+affirmation;
             }
 
             const ul = document.getElementById("todos");
-            ul.innerHTML = "";
-            todos.forEach(todo => {
-                const li = document.createElement("li");
-                li.textContent = todo;
+            ul.innerHTML="";
+            todos.forEach(todo=>{
+                const li=document.createElement("li");
+                li.textContent=todo;
                 ul.appendChild(li);
             });
         }
 
-        // Blade-animation
-        const leafCount = 5; // færre blade
-        for (let i = 0; i < leafCount; i++) {
-            const leaf = document.createElement('div');
-            leaf.className = 'leaf';
-            leaf.style.left = Math.random() * 100 + 'vw';
-            leaf.style.animationDuration = (10 + Math.random() * 10) + 's'; // langsommere
-            leaf.style.width = (40 + Math.random() * 40) + 'px';
-            leaf.style.height = leaf.style.width;
+        // Blade-animation 🍂
+        const leafCount = 5;
+        for(let i=0;i<leafCount;i++){
+            const leaf=document.createElement('div');
+            leaf.className='leaf';
+            leaf.style.left=Math.random()*100+'vw';
+            leaf.style.animationDuration=(10+Math.random()*10)+'s';
+            leaf.style.width=(40+Math.random()*40)+'px';
+            leaf.style.height=leaf.style.width;
             document.body.appendChild(leaf);
         }
     </script>
