--- a/index.html
+++ b/index.html
@@ -1,228 +1,301 @@
 <!DOCTYPE html>
 <html lang="da">
 <head>
-<meta charset="UTF-8">
-<title>Affirmation – En Daglig Inspiration</title>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-<style>
-html, body {
-    height: 100%;
-    margin: 0;
-    font-family: 'Poppins', sans-serif;
-    overflow: hidden; /* Ingen scroll */
-    background: linear-gradient(to bottom, #B3E5FC, #0D47A1);
-}
+    <meta charset="UTF-8">
+    <title>Affirmation – En Daglig Inspiration</title>
+    <!-- Google Font: Poppins -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+    <style>
+        html, body {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+            font-family: 'Poppins', sans-serif;
+            overflow: hidden; /* Ingen scroll */
+        }
 
-body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    text-align: center;
-    padding-top: 50px; /* Luft fra toppen */
-    padding-bottom: 50px; /* Luft fra bunden */
-}
+        body {
+            background: linear-gradient(to bottom, #B3E5FC, #0D47A1);
+            color: #333;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: flex-start;
+            text-align: center;
+        }
 
-header { width: 100%; }
+        header {
+            width: 100%;
+            margin-top: 40px;
+        }
 
-h1 { font-size: 48px; color: #0D47A1; margin: 0 0 20px 0; }
-h2 { font-size: 32px; margin-bottom: 20px; color: #1E88E5; font-weight: 400; }
+        .content {
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: flex-start;
+            margin-top: 20px;
+        }
 
-.content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
+        .pingvin-container {
+            width: 80%;
+            max-width: 600px;
+            aspect-ratio: 16 / 9;
+            overflow: hidden;
+            border-radius: 12px;
+            margin-bottom: 20px;
+        }
 
-.pingvin-container {
-    width: 60vw;
-    max-width: 600px;
-    aspect-ratio: 16/9;
-    overflow: hidden;
-    border-radius: 12px;
-    margin-bottom: 20px;
-}
+        .pingvin-container img {
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
+        }
 
-.pingvin-container img {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-}
+        h1 {
+            font-size: 3rem;
+            color: #0D47A1;
+            margin: 0 0 10px 0;
+        }
 
-button {
-    padding: 12px 24px;
-    font-size: 28px;
-    margin: 15px 0;
-    border: none;
-    border-radius: 8px;
-    background-color: #FFD966;
-    color: #0D47A1;
-    cursor: pointer;
-    font-weight: 600;
-    transition: transform 0.2s, background-color 0.2s;
-}
+        h2 {
+            font-size: 2rem;
+            margin-bottom: 20px;
+            color: #1E88E5;
+            font-weight: 400;
+        }
 
-button:hover {
-    transform: scale(1.05);
-    background-color: #FFE58A;
-}
+        p, li {
+            font-size: 1.5rem;
+            margin: 10px 0;
+        }
 
-p, li {
-    font-size: 28px;
-    margin: 10px 0;
-    line-height: 1.4;
-}
+        ul {
+            list-style: none;
+            padding-left: 0;
+            margin-top: 20px;
+        }
 
-ul {
-    list-style: none;
-    padding-left: 0;
-    margin: 10px 0 0 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center; /* Stjerner under hinanden */
-}
+        ul li {
+            margin: 10px 0;
+            text-align: center;
+        }
 
-.morning { color: #1E88E5; font-weight: 600; }
-.evening { color: #6A1B9A; font-weight: 600; }
+        button {
+            padding: 10px 20px;
+            font-size: 1.5rem;
+            margin: 10px 0;
+            border: none;
+            border-radius: 8px;
+            background-color: #FFD966;
+            color: #0D47A1;
+            cursor: pointer;
+            font-weight: 600;
+            transition: transform 0.2s, background-color 0.2s;
+        }
 
-/* Musikknap øverst til venstre */
-.music-player {
-    position: fixed;
-    top: 20px;
-    left: 20px;
-    z-index: 1000;
-}
+        button:hover {
+            transform: scale(1.05);
+            background-color: #FFE58A;
+        }
 
-.music-player button {
-    font-size: 48px;
-    padding: 0;
-    border: none;
-    background: transparent;
-    color: #0D47A1;
-    cursor: pointer;
-    transition: transform 0.2s;
-}
+        .morning {
+            color: #1E88E5;
+            font-weight: 600;
+        }
 
-.music-player button:hover { transform: scale(1.2); }
+        .evening {
+            color: #6A1B9A;
+            font-weight: 600;
+        }
 
-/* Blade */
-.leaf {
-    position: fixed;
-    top: -50px;
-    font-size: 40px; /* Større blade */
-    pointer-events: none;
-    z-index: 999;
-    opacity: 0.8;
-    animation-name: fall;
-    animation-timing-function: linear;
-    animation-iteration-count: 1;
-}
+        /* Musikafspiller øverst venstre */
+        .music-player {
+            position: fixed;
+            top: 20px;
+            left: 20px;
+            z-index: 1000;
+        }
 
-@keyframes fall {
-    0% { transform: translateY(-50px) rotate(0deg); }
-    100% { transform: translateY(100vh) rotate(360deg); }
-}
+        .music-player button {
+            font-size: 2.5rem;
+            padding: 0;
+            border: none;
+            background: transparent;
+            color: #0D47A1;
+            cursor: pointer;
+            transition: transform 0.2s;
+        }
 
-/* Responsivt */
-@media (max-width: 600px) {
-    h1 { font-size: 36px; }
-    h2 { font-size: 24px; }
-    p, li { font-size: 20px; }
-    button { font-size: 22px; padding: 10px 20px; }
-    .pingvin-container { width: 80vw; }
-    .leaf { font-size: 30px; }
-}
-</style>
+        .music-player button:hover {
+            transform: scale(1.2);
+        }
+
+        /* Blade animation */
+        .leaf {
+            position: fixed;
+            top: -50px;
+            font-size: 2rem;
+            color: #D35400;
+            opacity: 0.8;
+            animation-name: fall;
+            animation-iteration-count: infinite;
+            animation-timing-function: linear;
+        }
+
+        @keyframes fall {
+            0% { transform: translateY(-50px) rotate(0deg); }
+            100% { transform: translateY(110vh) rotate(360deg); }
+        }
+
+        @media (max-width: 600px) {
+            h1 { font-size: 2rem; }
+            h2 { font-size: 1.5rem; }
+            p, li, button { font-size: 1.2rem; }
+        }
+    </style>
 </head>
 <body>
+    <header>
+        <h1>Affirmation</h1>
+        <h2>En healende måde at reflektere på</h2>
+    </header>
 
-<header>
-    <h1>Affirmation</h1>
-    <h2>En healende måde at reflektere på</h2>
-</header>
-
-<div class="music-player">
-    <button id="musicBtn">🔊</button>
-    <audio id="backgroundMusic" loop>
-        <source src="forest-spirit-meditation-411288.mp3" type="audio/mpeg">
-        Din browser understøtter ikke lydafspilning.
-    </audio>
-</div>
-
-<div class="content">
-    <div class="pingvin-container">
-        <img src="billede4.png" alt="Min søde pingvin">
+    <div class="music-player">
+        <button id="musicBtn">🔊</button>
+        <audio id="backgroundMusic" loop>
+            <source src="forest-spirit-meditation-411288.mp3" type="audio/mpeg">
+            Din browser understøtter ikke lydafspilning.
+        </audio>
     </div>
-            
-    <button onclick="showAffirmation()">Vis dagens selvrefleksion</button>
-    <p id="affirmation">Tryk på knappen for at få en inspirerende handling</p>
-    <ul id="todos"></ul>
-</div>
 
-<script>
-const music = document.getElementById("backgroundMusic");
-const musicBtn = document.getElementById("musicBtn");
+    <div class="content">
+        <div class="pingvin-container">
+            <img src="billede4.png" alt="Min søde pingvin">
+        </div>
+                
+        <button onclick="showAffirmation()">Vis dagens selvrefleksion</button>
+        <p id="affirmation">Tryk på knappen for at få en inspirerende handling</p>
+        <ul id="todos"></ul>
+    </div>
 
-window.addEventListener("load", () => {
-    music.play().catch(() => { musicBtn.textContent = "🔊"; });
-    musicBtn.textContent = "🔊";
-});
+    <script>
+        // Musik
+        const music = document.getElementById("backgroundMusic");
+        const musicBtn = document.getElementById("musicBtn");
 
-musicBtn.addEventListener("click", () => {
-    if (music.paused) { music.play(); musicBtn.textContent = "🔊"; }
-    else { music.pause(); musicBtn.textContent = "🔇"; }
-});
+        window.addEventListener("load", () => {
+            music.play().catch(() => { musicBtn.textContent = "🔊"; });
+        });
 
-document.addEventListener("visibilitychange", () => {
-    if (document.hidden) { music.pause(); musicBtn.textContent = "🔇"; }
-});
+        musicBtn.addEventListener("click", () => {
+            if (music.paused) { music.play(); musicBtn.textContent="🔊"; } 
+            else { music.pause(); musicBtn.textContent="🔇"; }
+        });
 
-const morningAffirmations = ["I dag starter jeg med ro og glæde.","Jeg vælger at være stærk og positiv."];
-const eveningAffirmations = ["Jeg slipper dagen med taknemmelighed.","Jeg fortjener hvile og fred."];
+        document.addEventListener("visibilitychange", () => {
+            if (document.hidden) { music.pause(); musicBtn.textContent="🔇"; }
+        });
 
-const morningTodos = [["Tag dyb vejrtrækning","Skriv 3 ting du vil opnå","Start dagen med et smil"]];
-const eveningTodos = [["Skriv 3 ting du er taknemmelig for","Tag et varmt bad","Lyt til beroligende musik"]];
+        // Blade
+        const leaves = ["🍁","🍂"];
+        for(let i=0;i<10;i++){
+            const leaf = document.createElement("div");
+            leaf.className="leaf";
+            leaf.textContent = leaves[Math.floor(Math.random()*leaves.length)];
+            leaf.style.left=Math.random()*100+"vw";
+            leaf.style.fontSize=(20+Math.random()*40)+"px";
+            leaf.style.animationDuration=(10+Math.random()*10)+"s";
+            document.body.appendChild(leaf);
+        }
 
-function showAffirmation() {
-    const hour = new Date().getHours();
-    const affirmationElement = document.getElementById("affirmation");
-    let affirmation, todos;
+        // Affirmations
+        const morningAffirmations = [
+            "I dag starter jeg med ro og glæde.",
+            "Jeg vælger at være stærk og positiv.",
+            "Min energi åbner nye muligheder.",
+            "Jeg er fokuseret og klar til dagen.",
+            "Jeg tager ansvar for min egen lykke.",
+            "Jeg møder dagen med et åbent hjerte.",
+            "Jeg tiltrækker gode oplevelser.",
+            "Jeg har tillid til mig selv.",
+            "Jeg er taknemmelig for alt, jeg har.",
+            "Jeg vælger glæde i hvert øjeblik."
+        ];
 
-    if (hour < 12) {
-        affirmation = morningAffirmations[Math.floor(Math.random() * morningAffirmations.length)];
-        todos = morningTodos[0];
-        affirmationElement.textContent = "Morgeninspiration: " + affirmation;
-        affirmationElement.className = "morning";
-    } else {
-        affirmation = eveningAffirmations[Math.floor(Math.random() * eveningAffirmations.length)];
-        todos = eveningTodos[0];
-        affirmationElement.textContent = "Afteninspiration: " + affirmation;
-        affirmationElement.className = "evening";
-    }
+        const eveningAffirmations = [
+            "Jeg slipper dagen med taknemmelighed.",
+            "Jeg fortjener hvile og fred.",
+            "Jeg sender kærlige tanker til mig selv.",
+            "Jeg reflekterer over dagens gode øjeblikke.",
+            "Jeg tilgiver mig selv og andre.",
+            "Jeg lader bekymringer falde.",
+            "Jeg er stolt af mig selv i dag.",
+            "Jeg fylder mig selv med ro.",
+            "Jeg giver mig selv kærlighed og omsorg.",
+            "Jeg forbereder mig på en god nats søvn."
+        ];
 
-    const ul = document.getElementById("todos");
-    ul.innerHTML = "";
-    todos.forEach(todo => {
-        const li = document.createElement("li");
-        li.textContent = "⭐ " + todo;
-        ul.appendChild(li);
-    });
-}
+        const morningTodos = [
+            ["Tag dyb vejrtrækning", "Skriv 3 ting du vil opnå", "Start dagen med et smil", "Lav et glas vand", "Gentag en positiv sætning"],
+            ["Lav en positiv liste", "Tag på en kort gåtur", "Gentag en positiv sætning", "Planlæg dagens vigtigste opgave", "Visualiser succes"],
+            ["Prøv en ny aktivitet", "Planlæg en lille succes", "Drik et glas vand", "Lav taknemmelighedsliste", "Start med musik du elsker"],
+            ["Fokusér på én opgave", "Lav morgenritual", "Visualiser dagens succes", "Send kærlige tanker", "Skriv dagens intention"],
+            ["Skriv hvad der gør dig glad", "Prioriter dagens vigtigste opgave", "Tal venligt til dig selv", "Lav en kort meditation", "Planlæg sjove oplevelser"],
+            ["Start med åbent hjerte", "Send kærlige tanker", "Planlæg glædesøjeblik", "Gentag positiv sætning", "Lav taknemmelighedsliste"],
+            ["Sæt mål om sjove oplevelser", "Vær opmærksom på små glæder", "Lav noget kreativt", "Drik et glas vand", "Visualiser succes"],
+            ["Gentag positiv sætning højt", "Lav en kort meditation", "Vær opmærksom på omgivelserne", "Lav taknemmelighedsliste", "Start dagen med et smil"],
+            ["Lav taknemmelighedsliste", "Hils på en venlig person", "Skriv dagens intention", "Gentag positiv sætning", "Lav en kort meditation"],
+            ["Vælg en glædelig handling", "Del noget positivt", "Start dagen med musik", "Skriv 3 ting du værdsætter", "Lav taknemmelighedsliste"]
+        ];
 
-// Blade animation
-const leafEmojis = ["🍁","🍂"];
-function createLeaf() {
-    const leaf = document.createElement("div");
-    leaf.className = "leaf";
-    leaf.textContent = leafEmojis[Math.floor(Math.random()*leafEmojis.length)];
-    leaf.style.left = Math.random() * 90 + "vw";
-    leaf.style.fontSize = (40 + Math.random()*20) + "px"; // Større blade
-    leaf.style.animationDuration = (15 + Math.random()*10) + "s"; // Langsomt fald
-    document.body.appendChild(leaf);
-    setTimeout(() => leaf.remove(), parseFloat(leaf.style.animationDuration)*1000);
-}
-setInterval(createLeaf, 2000); // færre blade
-</script>
+        const eveningTodos = [
+            ["Skriv 3 ting du er taknemmelig for", "Tag et varmt bad", "Lyt til beroligende musik", "Læs lidt i en bog", "Lav en kort meditation"],
+            ["Luk dagen med et smil", "Læs en bog inden sengetid", "Lav vejrtrækning", "Skriv dagens læring", "Planlæg positiv morgen"],
+            ["Skriv kærligt brev til dig selv", "Mediter et par minutter", "Sig noget venligt til dig selv", "Lav taknemmelighedsliste", "Visualiser ro"],
+            ["Reflekter over små sejre", "Skriv dagens læring", "Planlæg positiv morgen", "Lyt til afslappende musik", "Lav vejrtrækning"],
+            ["Lav fred med dagens fejltrin", "Tilgiv dig selv og andre", "Lav afslappende rutine", "Tag et varmt bad", "Lyt til musik"],
+            ["Lad bekymringer falde", "Sluk skærme 30 min før sengetid", "Drik en kop urtete", "Lav en kort meditation", "Skriv 3 ting du værdsætter"],
+            ["Tæl dagens præstationer", "Ros dig selv for små ting", "Lav en kort meditation", "Lyt til musik", "Planlæg en positiv morgen"],
+            ["Fyld dig med ro", "Lyt til afslappende musik", "Lav afslappende vejrtrækning", "Skriv 3 ting du værdsætter", "Lav en kort meditation"],
+            ["Giv dig selv kærlighed og omsorg", "Skriv ned hvad du værdsætter", "Tag et øjeblik i stilhed", "Lav en kort meditation", "Lyt til musik"],
+            ["Forbered dig på god søvn", "Sørg for mørkt og roligt soveområde", "Lav kort afslapningsritual", "Skriv dagens læring", "Lyt til afslappende musik"]
+        ];
 
+        function showAffirmation() {
+            const hour = new Date().getHours();
+            const affirmationElement = document.getElementById("affirmation");
+            let affirmation, todos;
+
+            if(hour<12){
+                const idx=Math.floor(Math.random()*morningAffirmations.length);
+                affirmation=morningAffirmations[idx];
+                todos=getRandomTodos(morningTodos[idx]);
+                affirmationElement.textContent="Morgeninspiration: "+affirmation;
+                affirmationElement.className="morning";
+            } else {
+                const idx=Math.floor(Math.random()*eveningAffirmations.length);
+                affirmation=eveningAffirmations[idx];
+                todos=getRandomTodos(eveningTodos[idx]);
+                affirmationElement.textContent="Afteninspiration: "+affirmation;
+                affirmationElement.className="evening";
+            }
+
+            const ul=document.getElementById("todos");
+            ul.innerHTML="";
+            todos.forEach(todo=>{
+                const li=document.createElement("li");
+                li.textContent="⭐ "+todo;
+                ul.appendChild(li);
+            });
+        }
+
+        function getRandomTodos(todoArray){
+            const copy=[...todoArray];
+            copy.sort(()=>Math.random()-0.5);
+            return copy.slice(0,3);
+        }
+    </script>
 </body>
 </html>
